Add content to pasta page

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -6,6 +6,37 @@
     </head>
     <body>
         <h1>Pasta</h1>
+        <img src="../images/pasta.jpg" alt="Pasta" width="75%">
+        <h2>A pasta dish with marinara sauce</h4>
+        <p>This is a go to dish when it comes to weeknight dinners</p>
+        <p>Learning how to make this will greatly improve your cooking skill</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound of pasta (spaghetti, linguine, or your preferred type)</li>
+            <li>2 tablespoons of olive oil</li>
+            <li>1 onion, finely chopped</li>
+            <li>3 garlic cloves, minced</li>
+            <li>1 can of crushed tomatoes (28 ounces)</li>
+            <li>1 teaspoon of salt</li>
+            <li>1/2 teaspoon of black pepper</li>
+            <li>1 teaspoon of dried basil</li>
+            <li>1 teaspoon of dried oregano</li>
+            <li>1/4 teaspoon of red pepper flakes (optional)</li>
+            <li>Parmesan cheese, grated (optional)</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook the pasta according to the package instructions until al dente.</li>
+            <li>While the pasta is cooking, heat the olive oil in a large saucepan over medium heat.</li>
+            <li>Add the chopped onion and cook until soft and translucent, about 5-7 minutes.</li>
+            <li>Add the minced garlic and cook for another minute.</li>
+            <li>Add the crushed tomatoes, salt, black pepper, dried basil, dried oregano, and red pepper flakes (if using). Stir to combine.</li>
+            <li>Bring the sauce to a simmer and cook for 10-15 minutes, stirring occasionally.</li>
+            <li>Taste the sauce and adjust the seasoning as needed.</li>
+            <li>Drain the cooked pasta and return it to the pot.</li>
+            <li>Pour the marinara sauce over the pasta and toss to coat.</li>
+            <li>Serve with grated Parmesan cheese, if desired.</li>
+        </ol>
     </body>
 
 </html>
