--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pasta.html">Pasta</a>
+        <ul>
+            <li><a href="recipes/pasta.html">Pasta</a></li>
+            <li><a href="recipes/sushi.html">Sushi</a></li>
+        </ul>
     </body>
 </html>
