--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/pasta.html">Pasta</a></li>
             <li><a href="recipes/sushi.html">Sushi</a></li>
+            <li><a href="recipes/steak.html">Steak</a></li>
         </ul>
     </body>
 </html>
