Add steak content

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -7,6 +7,30 @@
     <body>
         <h1>Steak</h1>
         <img src="../images/steak.jpg" alt="Butter-basted Steak" width="75%">
-        
+        <p>A butter basted steak is a delicious and flavorful way to cook a steak.</p>
+        <p>The steak is seared in a hot skillet and then basted with melted butter, garlic, and herbs to create a rich and savory crust.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 steaks, about 1 inch thick (ribeye, NY strip, or your preferred cut)</li>
+            <li>Salt and pepper</li>
+            <li>2 tablespoons of vegetable oil</li>
+            <li>4 tablespoons of unsalted butter</li>
+            <li>2 garlic cloves, smashed</li>
+            <li>2 sprigs of fresh thyme</li>
+            <li>1 sprig of fresh rosemary</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Remove the steaks from the refrigerator and let them come to room temperature for 30 minutes.</li>
+            <li>Season the steaks generously with salt and pepper on both sides.</li>
+            <li>Heat the vegetable oil in a large skillet over high heat until it begins to smoke.</li>
+            <li>Add the steaks to the skillet and sear for 2-3 minutes on each side until browned.</li>
+            <li>Reduce the heat to medium and add the butter, garlic, thyme, and rosemary to the skillet.</li>
+            <li>Use a spoon to baste the steaks with the melted butter, spooning the butter over the steaks repeatedly for 1-2 minutes.</li>
+            <li>Use a meat thermometer to check the internal temperature of the steaks. For medium-rare, the temperature should be 130-135°F.</li>
+            <li>Remove the steaks from the skillet and let them rest for 5 minutes.</li>
+            <li>Slice the steaks against the grain and serve.</li>
+        </ol>
+
     </body>
 </html>
