change image descriptions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="images/cooking.jpg" alt="Jett cooking">
         <ul>
             <li><a href="recipes/pasta.html">Pasta</a></li>
             <li><a href="recipes/sushi.html">Sushi</a></li>
