--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -8,8 +8,8 @@
         <h1>Pasta</h1>
         <img src="../images/pasta.jpg" alt="Pasta" width="75%">
         <h2>A pasta dish with marinara sauce</h4>
-        <p>This is a go to dish when it comes to weeknight dinners</p>
-        <p>Learning how to make this will greatly improve your cooking skill</p>
+            <p>Pasta with marinara is a classic Italian dish that consists of pasta tossed in a tomato-based sauce.</p>
+            <p>The sauce is made with crushed tomatoes, garlic, herbs, and seasonings, and is simmered until thick and flavorful.</p>
         <h2>Ingredients</h2>
         <ul>
             <li>1 pound of pasta (spaghetti, linguine, or your preferred type)</li>
