--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -7,8 +7,8 @@
     <body>
         <h1>Sushi</h1>
         <img src="../images/sushi.jpg" alt="Sushi" width="75%">
-        <p>Basic maki sushi rolls</p>
-        <p>Learn how to make a seafood dish</p>
+        <p>Maki rolls are a type of sushi that are made by rolling sushi rice and various fillings in a sheet of nori seaweed.</p> 
+        <p>The rolls are then sliced into bite-sized pieces and served with soy sauce, wasabi, and pickled ginger.</p>
         <h2>Ingredients</h2>
         <ul>
             <li>2 cups of sushi rice</li>
